Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-06-04 (SVN):
    * Made snd_mix.c to support 8 bit signed output. S8 mode is used by
      the Amiga AHI backend which doesn't support U8, at least not when
      running stereo: ahi.h lists AHIST_M8U (obsolete) but no AHIST_S8U.

2012-06-04 (SVN):
    * snd_ahi.c (EffectFunc): Fixed shadowing of the file-scoped ad
      variable. Made file-scoped ad pointer static.

2012-06-04 (SVN):
    * Added snd_ahi.c as a new audio driver for amiga, adjusted snd_sys
      and the makefiles for it. Added Mark Olsen to AUTHORS->credits.

2012-06-03 (SVN):
    * utils/cmdlib.c, util_io.c: Added amiga specific time and file i/o
      procedures based on engine-side sys_amiga.c.

2012-06-03 (SVN):
    * hw_utils/hwmaster: Split sys_main.c into sys_unix.c and sys_win.c.
      Added sys_amiga.c based on hwsv version of the file. Adjusted the
      makefile for target specific sys_* objects.

2012-06-03 (SVN):
    * sys_amiga.c: Sys_ConsoleInput fix from Szilard Biro. Added a new
      Sys_AtExit() procedure, moved the timerio cleanup and console mode
      restoration calls into it. Registered Sys_AtExit to atexit() from
      main() just before calling Sys_Init(). After opening timer.device
      in Sys_Init(), added call to wait 1ms (noticed in old Amiga Quake
      ports.)

2012-06-02 (SVN):
    * sys_amiga.c, sys_dos.c, sys_win.c (Sys_FindFirst): Make sure that
      the string we pass to OS findfirst-like function stays persistent
      and doesn't lose context.

2012-06-02 (SVN):
    * sys_amiga.c (pattern_helper): Fixed infinite loop in the first for
      construct.
    * Extended Amiga/AROS support to h2ded and hexenworld client/server.

2012-06-02 (SVN):
    * Removed the beta/prerelease versioning stuff.

2012-06-02 (SVN):
    * sys_amiga.c: Added a pattern helper for Sys_FindFirst() to replace
      each occurence of "*" by "#?" which is what Amiga's MatchFirst api